Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-128644

QDoc fails to compile against Clang-19 RC1-RC4, Clang 20

XMLWordPrintable

    • All
    • 0afa5a31c (6.8.0), 4a368a06a (dev), 4946f3fb1 (6.8)
    • DaVinci 103, DaVinci 104

      When using clang-19 there is a failure when compiling qttools

      NOTE: cmake --build /mnt/b/yoe/master/build/tmp/work/x86_64-linux/qttools-native/6.8.0/build --target all –
      [47/146] Building CXX object src/qdoc/qdoc/CMakeFiles/qdoc.dir/src/qdoc/clangcodeparser.cpp.o
      FAILED: src/qdoc/qdoc/CMakeFiles/qdoc.dir/src/qdoc/clangcodeparser.cpp.o
      /mnt/b/yoe/master/build/tmp/hosttools/g++ -DCLANG_RESOURCE_DIR=\"/mnt/b/yoe/master/build/tmp/work/x86_64-linux/qttools-native/6.8.0/recipe-sysroot-native/usr/lib/clang/19.1.0/include\" -DLIBCLANG_VERSION_MAJOR=19 -DQDOC2_COMPATux/qttools-native/6.8.0/build/src/qdoc/qdoc -I/mnt/b/yoe/master/build/tmp/work/x86_64-linux/qttools-native/6.8.0/git/src/qdoc/qdoc/src -I/mnt/b/yoe/master/build/tmp/work/x86_64-linux/qttools-native/6.8.0/recipe-sysroot-native/usr/include/QtQml/6.8.0 -I/mnt/b/yoe/master/build/tmp/work/x86_64-linux/qttools-native/6.8.0/recipe-sysroot-native/usr/include/QtQml/6.8.0/QtQml -I/mnt/b/yoe/master/build/tmp/work/x86_64-linux/qttools-native/6.8.0/recipe-sysroot-native/usr/include/QtCore/6.8.0 -I/mnt/b/yoe/master/build/tmp/work/x86_64-linux/qttools-native/6.8.0/recipe-sysroot-native/usr/include/QtCore/6.8.0/QtCore -I/mnt/b/yoe/master/build/tmp/work/x86_64-linux/qttools-native/6.8.0/recipe-sysroot-native/usr/include/QtCore -I/mnt/b/yoe/master/build/tmp/work/x86_64-linux/qttools-native/6.8.0/recipe-sysroot-native/usr/lib/mkspecs/linux-g++ -I/mnt/b/yoe/master/build/tmp/work/x86_64-linux/qttools-native/6.8.0/recipe-sysroot-native/usr/include/QtQml -I/mnt/b/yoe/master/build/tmp/work/x86_64-linux/qttools-native/6.8.0/recipe-sysroot-native/usr/include/QtQmlIntegration -I/mnt/b/yoe/master/build/tmp/work/x86_64-linux/qttools-native/6.8.0/recipe-sysroot-native/usr/include/QtNetwork -isystem/mnt/b/yoe/master/build/tmp/work/x86_64-linux/qttools-native/6.8.0/recipe-sysroot-native/usr/include -O2 -pipe -fvisibility-inlines-hidden -DNDEBUG -O2 -std=gnu++17 -fvisibility=hidden -fvisibility-inlines-hidden -Wall -Wextra -fno-exceptions -fPIC -U_FORTIFY_SOURCE -Wsuggest-override -fcf-protection=full -D_FORTIFY_SOURCE=3 -fstack-protector-strong -fstack-clash-protection -MD -MT src/qdoc/qdoc/CMakeFiles/qdoc.dir/src/qdoc/clangcodeparser.cpp.o -MF src/qdoc/qdoc/CMakeFiles/qdoc.dir/src/qdoc/clangcodeparser.cpp.o.d -o src/qdoc/qdoc/CMakeFiles/qdoc.dir/src/qdoc/clangcodeparser.cpp.o -c /mnt/b/yoe/master/build/tmp/work/x86_64-linux/qttools-native/6.8.0/git/src/qdoc/qdoc/src/qdoc/clangcodeparser.cpp
      /mnt/b/yoe/master/build/tmp/work/x86_64-linux/qttools-native/6.8.0/git/src/qdoc/qdoc/src/qdoc/clangcodeparser.cpp: In function ‘std::string get_default_value_initializer_as_string(const clang::TemplateTypeParmDecl*)’:
      /mnt/b/yoe/master/build/tmp/work/x86_64-linux/qttools-native/6.8.0/git/src/qdoc/qdoc/src/qdoc/clangcodeparser.cpp:212:76: error: could not convert ‘parameter->clang::TemplateTypeParmDecl::getDefaultArgument()’ from ‘const clang::TemplateArgumentLoc’ to ‘clang::QualType’
        212 |                 get_fully_qualified_type_name(parameter->getDefaultArgument(), parameter->getASTContext()) :
            |                                               ~~~~~~~~~~~~~~~~~~~~~~~~~~~{}^{~}
            |                                                                            |
            |                                                                            const clang::TemplateArgumentLoc
      /mnt/b/yoe/master/build/tmp/work/x86_64-linux/qttools-native/6.8.0/git/src/qdoc/qdoc/src/qdoc/clangcodeparser.cpp: In function ‘std::string get_default_value_initializer_as_string(const clang::NonTypeTemplateParmDecl*)’:
      /mnt/b/yoe/master/build/tmp/work/x86_64-linux/qttools-native/6.8.0/git/src/qdoc/qdoc/src/qdoc/clangcodeparser.cpp:228:63: error: cannot convert ‘const clang::TemplateArgumentLoc’ to ‘const clang::Expr*’
        228 |         get_expression_as_string(parameter->getDefaultArgument(), parameter->getASTContext()) : "";
            |                                  ~~~~~~~~~~~~~~~~~~~~~~~~~~~{}^{~}
            |                                                               |
            |                                                               const clang::TemplateArgumentLoc
      /mnt/b/yoe/master/build/tmp/work/x86_64-linux/qttools-native/6.8.0/git/src/qdoc/qdoc/src/qdoc/clangcodeparser.cpp:186:64: note:   initializing argument 1 of ‘std::string get_expression_as_string(const clang::Expr*, const clang::ASTContext&)’
        186 | static std::string get_expression_as_string(const clang::Expr* expression, const clang::ASTContext& declaration_context) {
            |                                             ~~~~~~~~~~~~~~~~~{}^{}~~~~~~~
      /mnt/b/yoe/master/build/tmp/work/x86_64-linux/qttools-native/6.8.0/git/src/qdoc/qdoc/src/qdoc/clangcodeparser.cpp: In function ‘std::string get_default_value_initializer_as_string(const clang::TemplateTemplateParmDecl*)’:
      /mnt/b/yoe/master/build/tmp/work/x86_64-linux/qttools-native/6.8.0/git/src/qdoc/qdoc/src/qdoc/clangcodeparser.cpp:248:113: error: ‘Fully’ is not a member of ‘clang::TemplateName::Qualified’
        248 |         template_name.print(ss, parameter->getASTContext().getPrintingPolicy(), clang::TemplateName::Qualified::Fully);
            |                                                                                                                 ^~~~~

        For Gerrit Dashboard: QTBUG-128644
        # Subject Branch Project Status CR V

            paulwicking Paul Wicking
            khem Khem Raj
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes